# stm32wb55-homekit

./: .gitignore  .gitmodules  Cargo.toml  Embed.toml  dump.txt  memory.x  rust-toolchain.toml
.cargo/: config  config.toml
.github/workflows/: bloat.yml  ci.yml
homekit-ble/: Cargo.toml
homekit-ble/src/: constant.rs  lib.rs  tlv.rs
homekit-tester/: Cargo.toml  README.md
homekit-tester/src/: homekit.rs  main.rs
src/: main.rs
stm32wb55-homekit/: Cargo.toml
stm32wb55-homekit/.cargo/: config.toml
stm32wb55-homekit/src/: ble.rs  hap.rs  main.rs  uuid.rs
