[package]
name = "stm32wb55-homekit"
version = "0.1.0"
authors = ["Dominik Boehi <dominik.boehi@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tiwalun/stm32wb55-homekit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stm32w55-homekit"
path = "src/main.rs"
test = false

[dependencies]
stm32wb55 = { version = "0.1.0" }
stm32wb-hal = { version = "0.1.1" }
bluetooth-hci =  { version = "0.1.0"}
bbqueue = "0.4.8"


cortex-m = "0.6.2"
stm32wb-pac = "0.2"
as-slice = "0.1"
bit_field = "0.10.0"
heapless = "0.5.3"
nb = "0.1"

rtt-target = { version = "0.2.0", features = ["cortex-m"]}
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
#panic-halt = "0.2.0"

cortex-m-rt = "0.6.6"

[package.metadata]
chip = "STM32WB55CCUX"


[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.byteorder]
version = "1"
default-features = false

[profile.release]
codegen-units = 1
debug = true
lto = true

[patch.crates-io]
bluetooth-hci = { git = "https://github.com/Tiwalun/bluetooth-hci", branch = "add-data-len-phy-update-events" }

# Patched version with updated cortex-m-rt
stm32wb-pac = { git = "https://github.com/Tiwalun/stm32wb-pac"}
stm32wb55 = { git = "https://github.com/Tiwalun/stm32wb55"}