[workspace]
members = [
    "stm32wb55-homekit",
    "homekit-ble"
]

[profile.release]
codegen-units = 1
debug = true
lto = true

[patch.crates-io]
bluetooth-hci = { git = "https://github.com/Tiwalun/bluetooth-hci", branch = "add-data-len-phy-update-events" }

# Patched version with updated cortex-m-rt
stm32wb-pac = { git = "https://github.com/Tiwalun/stm32wb-pac"}
stm32wb55 = { git = "https://github.com/Tiwalun/stm32wb55"}
