[workspace]
members = [
    "stm32wb55-homekit",
    "homekit-ble"
]

# The test app uses std, so cannot be part of the workspace
exclude = [
    "homekit-tester"
]

[profile.release]
codegen-units = 1
debug = true
lto = true

[patch.crates-io]
bluetooth-hci = { git = "https://github.com/Tiwalun/bluetooth-hci", branch = "add-data-len-phy-update-events" }

# Patched version with updated cortex-m-rt
stm32wb55 = { git = "https://github.com/Tiwalun/stm32wb55"}
