[package]
name = "homekit-tester"
version = "0.1.0"
authors = ["Dominik Boehi <dominik.boehi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blez = "0.8.0"
tokio = { version = "1.6.1", features = ["rt-multi-thread"] }
futures = "0.3.15"
scroll = "0.10.2"
anyhow = "1.0.40"
pretty_env_logger = "*"
homekit-ble = { path = "../homekit-ble" }
