[package]
name = "homekit-tester"
version = "0.1.0"
authors = ["Dominik Boehi <dominik.boehi@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = "0.13.0"
tokio = { version = "1.6.1", features = ["rt-multi-thread"] }
futures = "0.3.15"
scroll = "0.10.2"
anyhow = "1.0.40"
pretty_env_logger = "*"
homekit-ble = { path = "../homekit-ble" }
log = "0.4.14"
bitflags = "1.3.2"
