[package]
name = "stm32wb55-homekit"
version = "0.1.0"
authors = ["Dominik Boehi <dominik.boehi@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tiwalun/stm32wb55-homekit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stm32wb55-homekit"
path = "src/main.rs"
test = false

[dependencies]
homekit-ble = { version = "0.1.0", path = "../homekit-ble"}

stm32wb55 = { version = "0.1.0" }
stm32wb-hal = { version = "0.1.1", features = ["xG-package"] }
bluetooth-hci =  { version = "0.1.0"}
bbqueue = "0.4.8"

bitflags = "1.2.1"


cortex-m = "0.6.2"
stm32wb-pac = "0.2"
as-slice = "0.1"
heapless = "0.5.3"
nb = "0.1"

rtt-target = { version = "0.2.0", features = ["cortex-m"]}
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
#panic-halt = "0.2.0"

cortex-m-rt = "0.6.6"

[package.metadata]
chip = "STM32WB55CCUX"


[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.byteorder]
version = "1"
default-features = false
